# da3-nvs

./: .gitignore  README.md  pyproject.toml
da3-mask/: da3_mask_experiment.py  test_inference.py  train.py
scripts/: mock_train.py
src/da3_nvs/: __init__.py  config.py
src/da3_nvs/data/: __init__.py  nerf_synthetic.py  rays.py  types.py
src/da3_nvs/models/: __init__.py  common.py  da3_backbone.py  da3_nvs.py  epipolar.py  nvs_head.py  ray_encoder.py  rgb_patch_encoder.py
src/da3_nvs/train/: __init__.py  engine.py
tests/: test_da3_mask_experiment.py  test_epipolar.py  test_model_shapes.py  test_nerf_synthetic.py  test_rays.py
